--- a/mac_project/bin/proxy_gen.app/Contents/Info.plist
+++ b/mac_project/bin/proxy_gen.app/Contents/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>proxy_gen</string>
 	<key>CFBundleIconFile</key>
-	<string>icon.icns</string>
+	<string>tcg_proxy_gen.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>cc.openFrameworks.ofapp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
