hid console, fucking with icon

--- a/win_project/tcg_proxy_gen.vcxproj
+++ b/win_project/tcg_proxy_gen.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="..\src\FeedbackText.hpp" />
     <ClInclude Include="..\src\ofApp.h" />
     <ClInclude Include="..\src\Slider.hpp" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
@@ -202,6 +203,9 @@
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">/D_DEBUG %(AdditionalOptions)</AdditionalOptions>
       <AdditionalIncludeDirectories>$(OF_ROOT)\libs\openFrameworksCompiled\project\vs</AdditionalIncludeDirectories>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ProjectExtensions>
