--- a/win_project/tcg_proxy_gen.vcxproj.filters
+++ b/win_project/tcg_proxy_gen.vcxproj.filters
@@ -71,8 +71,12 @@
     <ClInclude Include="..\src\ofApp.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="favicon.ico" />
   </ItemGroup>
 </Project>
